--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fcm Notification</string>
+    <string name="app_name">Fusion Notifications</string>
     <string name="user_intro">
         Hello James, please select the types of notifications you wish to receive.
     </string>
